--- a/backend/.env
+++ b/backend/.env
@@ -5,3 +5,8 @@ DB_PASSWORD =
 DB_HOST = localhost
 DB_PORT = 3306
 DB_CONNECTION = mysql
+
+
+
+
+JWT_SECRET = hackoverflow_hackanova_med,asjdaebufiuwjbiegbc
