--- a/package.json
+++ b/package.json
@@ -3,8 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@date-io/date-fns": "^2.16.0",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
+    "@material-ui/pickers": "^3.3.10",
     "@mui/icons-material": "^5.11.0",
     "@mui/material": "^5.11.5",
     "@mui/styled-engine-sc": "^5.11.0",
@@ -15,12 +17,15 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.2.3",
+    "dayjs": "^1.11.7",
+    "jquery": "^3.6.3",
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-date-picker": "^9.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.7.0",
     "react-scripts": "5.0.1",
+    "react-time-picker": "^5.2.0",
     "styled-components": "^5.3.6",
     "sweetalert": "^2.1.2",
     "web-vitals": "^2.1.4"
